[project]
name = "polus-images-formats-ome-converter"
version = "0.3.4-dev2"
description = "Convert BioFormats datatypes to ome.tif or ome.zarr file format"
readme = "README.md"
authors = [
  {name = "Nick Schaub", email = "nick.schaub@nih.gov"},
  {name = "Hamdah Shafqat abbasi", email = "hamdahshafqat.abbasi@nih.gov"},
  {name = "Najib Ishaq", email = "najib.ishaq@nih.gov"}
]
packages = [{include = "polus", from = "src"}]
python = ">=3.11,<3.13"

[project.dependencies]
bfio = "2.5.0"
types-tqdm = ">=4.67.0.20250417"
filepattern = "2.1.4"
typer = "0.24.1"
numpy = ">=2.0.0"
tqdm = ">=4.67.1"
scikit-image = ">=0.26.0"

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.1",
    "pre-commit>=3.0.4",
    "pytest>=7.2.1",
    "ipykernel>=6.21.2",
    "requests>=2.28.2",
    "scikit-image>=0.26.0",
    "matplotlib>=3.9.4"
]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[tool.pytest.ini_options]
pythonpath = ["."]
