[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "polus-images-formats-ome-converter"
dynamic = ["version"]
description = "Convert BioFormats datatypes to ome.tif or ome.zarr file format."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Nick Schaub", email = "nick.schaub@nih.gov" },
  { name = "Hamdah Shafqat Abbasi", email = "hamdahshafqat.abbasi@nih.gov" },
  { name = "Najib Ishaq", email = "najib.ishaq@nih.gov" }
]
maintainers = [
  { name = "Hamdah Shafqat Abbasi", email = "hamdahshafqat.abbasi@nih.gov" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
requires-python = ">=3.11,<3.13"

dependencies = [
  "bfio==2.5.0",
  "types-tqdm>=4.67.0.20250417",
  "filepattern==2.1.4",
  "typer==0.24.1",
  "numpy>=2.0.0",
  "tqdm>=4.67.1",
  "scikit-image>=0.26.0"
]

[project.optional-dependencies]
dev = [
  "bump2version>=1.0.1",
  "pre-commit>=3.0.4",
  "pytest>=7.2.1",
  "ipykernel>=6.21.2",
  "requests>=2.28.2",
  "matplotlib>=3.9.4",
  "scikit-image>=0.26.0",
  "black>=25.1.0",
  "flake8>=7.2.0",
  "mypy>=1.15.0"
]

[project.scripts]
ome-converter = "polus.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["VERSION"]

# Mypy configuration
[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

# Optional: Codespell configuration
[tool.codespell]
skip = "*.svg,*.html"
ignore-words-list = "output"