[tool.poetry]
name = "polus-images-transforms-images-apply-flatfield"
version = "2.0.1-dev2"
description = ""
authors = [
    "Nick Schaub <nicholas.schaub@nih.gov>",
    "Najib Ishaq <najib.ishaq@nih.gov>"
]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
bfio = "2.5.0"
filepattern = "2.1.4"
numpy = "^1.24.3"
tqdm = "^4.65.0"
typer = "0.24.1"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-sugar = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
